Bug 238618 - dolphin rotates photos according to exif information, needs option to turn it off
Summary: dolphin rotates photos according to exif information, needs option to turn it...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-23 22:44 UTC by Janet
Modified: 2010-11-13 15:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2010-05-23 22:44:25 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Dolphin 1.4/KDE SC 4.4.3 rotates the thumbnails of photos according to their exif information. That's extremely irritating because you think the photo is rotated when it is not! Makes it very hard to find the photos that still need to be rotated, drives me nuts, seriously hinders the workflow. Please provide an option to turn that behaviour off (and off should be the default because giving false information always is a bad behaviour, expecially for a filemanager).

Reproducible: Always

Steps to Reproduce:
Copy photos to dolphin from camera that stores orientation of photo in exif information, turn previews on.


Expected Results:  
Show thumbnails of photos as they (and the photos!) are: landscape orientation when the photo is in portrait orientation but actually not yet rotated.

OS: Linux (i686) release 2.6.34-0.slh.2-sidux-686
Compiler: cc
KDE SC 4.4.3
Comment 1 Janet 2010-05-24 05:43:55 UTC
I just got aware of that it's not only the problem of not seeing *which* photos you have to rotate, it's a huge problem that you cannot see into *which direction* you have to rotate it! So it's impossible anymore to use dolphin for working with the photos at all! Well, now that's a severe problem!

Besides that the photos are shown in *wrong* orientation after rotation with imagemagick batch opration in terminal or dolphin servicemenu (e.g. kim).
Comment 2 Peter Paulsen 2010-08-06 13:34:27 UTC
Drives me mad too! All photos in my huge collection that I have rotated before that dolphin "feature" are now shown in wrong orientation - or not - I cannot say if they are rotated correctly or if they are just shown rotated or shown rotated wrong or whatsoever. Please please please give the control over that back to the user and add an option to dolphin to NOT show the thumbnails rotated according to the exif info but show them as they really are! 

I even have turned off the option to use the thumbnails saved in the exif information - but still dolphin shows the thumbnails in an other orientation as the pictures are or not what I cannot distinguish without using an imageviewer which is "featureless" in that case. It is just confusing, very.
Comment 3 Peter Penz 2010-08-06 13:55:21 UTC
Sorry for the troubles, but this change was made outside the scope of Dolphin in the JPEG-loader plugin. I agree that an option in Dolphin is required here, I've changed the severity of this bug from "wishlist" to "normal". Please push me again if the state of this bug has not been changed until end of October. Thanks!
Comment 4 Janet 2010-11-10 20:51:40 UTC
Push! :)
Comment 5 Peter Penz 2010-11-10 23:04:49 UTC
SVN commit 1195350 by ppenz:

Move the functionality of the JpegCreator to automatically rotate the image corresponding to EXIF to a new creator called JpegRotatedCreator. This allows the users to specify whether they want to have automatically rotated JPEGs or not.

BUG: 238618
FIXED-IN: 4.6.0


 M  +16 -5     CMakeLists.txt  
 M  +2 -239    jpegcreator.cpp  
 M  +0 -2      jpegcreator.h  
 A             jpegcreatorhelper.cpp   [License: LGPL (v2+)]
 A             jpegcreatorhelper.h   [License: LGPL (v2+)]
 A             jpegrotatedcreator.cpp   [License: LGPL (v2+)]
 A             jpegrotatedcreator.h   [License: LGPL (v2+)]
 A             jpegrotatedthumbnail.desktop  
 M  +1 -1      thumbnail.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1195350
Comment 6 Peter Penz 2010-11-10 23:13:49 UTC
@Janet: I hope the current solution is sufficient, I've to admit that it is not perfect but I've currently no better idea how to solve this without introducing a "settings framework" for thumbnail-creators ;-)

So now in the Previews dialog it is possible to select between "JPEG Images" and "JPEG Images (Rotated Automatically)". The not so nice things are:
- When selecting both, it is undefined which creator will be taken.
- When selecting "JPEG Images" and creating thumbnails and afterwards changing it to "JPEG Images (Rotated Automatically)", existing thumbnails won't get recreated. In this case you've to manually delete the .thumbnails directory :-(
Comment 7 Christoph Feck 2010-11-10 23:31:58 UTC
Peter, we should think about having settings for thumbnailers for 4.7 or so.

MPlayerThumbnailer has a separate application for settings that I hadn't discovered until I looked at the source, and people are asking for options in the text thumbnailer, such as whether to break lines or simply cut them off.

Not sure what other thumbnailers could need options, but you know, KDE users like to play with many knobs :)
Comment 8 Peter Penz 2010-11-11 08:20:40 UTC
Yes, if other thumbnails need such settings too then we should really think about this for 4.7. I've added an internal TODO for me and will start with this after 4.6 has been released. If you have any suggestions (or want to do it yourself :-)) please just drop me a note!
Comment 9 Janet 2010-11-13 15:43:17 UTC
Thanks for this solution, it will help a lot!

This is a workaround that can only be used in dolphin I guess? It cannot be proposed to e.g. gwenview (which also has no option to turn off auto-rotation) I suppose?
Comment 10 Peter Penz 2010-11-13 15:56:25 UTC
> This is a workaround that can only be used in dolphin I guess?
> It cannot be proposed to e.g. gwenview

It works for all applications, that use the default thumbnail mechanism from kdelibs. But I don't know whether Gwenview uses it :-/