Move the functionality of the JpegCreator to automatically rotate the image corresponding to EXIF to a new creator called JpegRotatedCreator. This allows the users to specify whether they want to have automatically rotated JPEGs or not.

BUG: 238618
FIXED-IN: 4.6.0

svn path=/trunk/KDE/kdebase/runtime/; revision=1195350